applications/envoy-proxy-bouncer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-proxy-bouncer
  labels:
    shared-gateway-access: "true"
