applications/envoy-proxy-bouncer/backend.policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: captcha-backend-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bouncer-captcha
  rateLimit:
    type: Local
    local:
      rules:
        - clientSelectors:
            - sourceCIDR:
                type: Exact
                value: 0.0.0.0/0
          limit:
            requests: 10
            unit: Minute
